# ai-volution

./: README.md  docker-compose.yml
backend/: .dockerignore  .gitignore  Dockerfile  alembic.ini  main.py  pyproject.toml
backend/agents/: news_agent.py
backend/alembic/: env.py
backend/alembic/versions/: 6132db60849f_add_new_models.py  9f38bc08b2dd_add_user_id_to_categories.py
backend/config/: database.py
backend/models/: database_models.py  highlight_models.py  news_agent_models.py  news_models.py  summary_models.py
backend/routers/: categories.py  files.py  users.py
backend/schemas/: category.py  file.py  user.py
backend/services/: agent.py  document_analyzer.py  document_summarizer.py  file_processor.py  indexer.py  news_service.py
backend/tests/: cat_to_num.py  test_api.py
backend/utils/: auth.py  docx_highlighter.py  embedder.py  news_api.py  parser.py  pdf_highlighter.py  ppt_highlighter.py
mobile_app/: pubspec.yaml
mobile_app/lib/: main.dart
mobile_app/lib/models/: category.dart  file.dart  news_article.dart  user.dart
mobile_app/lib/providers/: auth_provider.dart  category_provider.dart  file_provider.dart
mobile_app/lib/screens/: category_screen.dart  document_screen.dart  file_viewer_screen.dart  home_screen.dart  login_screen.dart  news_screen.dart  profile_screen.dart  upload_screen.dart
mobile_app/lib/services/: api_service.dart
